# windowed-sa

./: .gitignore  CMakeLists.txt  LICENSE
src/windowed/: CMakeLists.txt  dllmain.cpp
src/windowed/plugin/: misc.h  plugin.cpp  plugin.h
